bg color changed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="style.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="bgPeriwinkle">
     <div id="app">
         <section class="vh-100 bgPeriwinkle">
             <div class="container py-5 h-100">
